# MealMind-Backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci-pull-request.yml  ci.yml
migrations/: 0001_users.sql  0002_meals.sql  0003_photos.sql  0004_meal_nutrition.sql  0005_meal_global_score.sql
src/: app.rs  config.rs  db.rs  lib.rs  main.rs  state.rs  storage.rs
src/auth/: claims.rs  dto.rs  extractors.rs  handlers.rs  jwt.rs  mod.rs  password.rs  repo.rs  repo_types.rs  services.rs
src/images/: mod.rs  repo.rs  services.rs
src/meals/: dto.rs  handlers.rs  mod.rs  repo.rs  repo_types.rs  services.rs
src/photos/: mod.rs  repo.rs  services.rs
src/routes/: auth.rs  me.rs  meals.rs  mod.rs
