[package]
name = "mealmind"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "time", "tls-rustls", "migrate", "rust_decimal"] }
argon2 = "0.5"
jsonwebtoken = "9"
 time = { version = "0.3", features = ["macros", "serde-well-known", "serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = "0.5"
rand_core = "0.6"
base64ct = "=1.7.3"
regex = "1"
lazy_static = "1"
bytes = "1.10.1"
serde_bytes = "0.11.19"
aws-sdk-s3 = "1.109.0"
aws-config = "1.8.8"
async-trait = "0.1.89"
