[package]
name = "mealmind"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls", "postgres", "macros", "uuid", "time", "migrate", "json"
] }
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
rand = "0.8"
regex = "1"
lazy_static = "1"
time = { version = "0.3", features = ["macros", "serde-well-known", "serde", "formatting", "parsing"] }

bytes = "1"
serde_bytes = "0.11"
async-trait = "0.1"

aws-config = "1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
aws-smithy-types = "1"

base64ct = "=1.7.3"

